Fixed alignment of Deploy button.
Now aligned with editor.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -240,7 +240,7 @@ button:active {
 #header-project-loader {
   text-align: right;
   float: right;
-  padding-right: 10px;
+  padding-right: 12px;
 }
 
 #header-project-loader button {
